<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/networking"
    tools:context="com.samourai.wallet.network.NetworkDashboard">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:backgroundTint="@color/window"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/network_connectivity"
                android:textSize="16sp"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/offline_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginTop="8dp"
            android:background="#C45563"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="18dp"
                android:src="@drawable/ic_signal_cellular_connected_no_internet" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/is_offline"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/history_will_be_updated"
                    android:textAlignment="viewStart" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offline_message">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/network_data_status_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/circle_shape"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="20dp"
                    app:tint="@color/disabledRed" />


                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/data_connection"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintBottom_toBottomOf="@+id/network_data_status_icon"
                    app:layout_constraintEnd_toStartOf="@+id/networking_data_btn"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="@+id/network_data_status_icon"
                    app:layout_constraintVertical_bias="0.0"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/networking_data_btn"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="8dp"
                    android:text="Disable"
                    android:textColor="#00a1cb"
                    app:layout_constraintBottom_toBottomOf="@+id/textView37"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/textView37"
                    app:layout_constraintTop_toTopOf="@+id/textView37" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.15" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/network_tor_status_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/circle_shape"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/disabledRed" />


                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Tor Routing       "
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintBottom_toBottomOf="@+id/network_tor_status_icon"
                    app:layout_constraintStart_toStartOf="@+id/guideline16"
                    app:layout_constraintTop_toTopOf="@+id/network_tor_status_icon"
                    android:textSize="16sp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.15" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#A95F5F5F"
                android:layout_marginTop="40dp">

            </View>

            <TextView
                android:id="@+id/textView78"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dojo_connectivity"
                android:fontFamily="@font/roboto_bold"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="10dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/network_dojo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:baselineAligned="false"
                android:gravity="center_horizontal|center_vertical"
                android:visibility="visible">


                <ImageView
                    android:id="@+id/network_dojo_status_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/circle_shape"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline17"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/disabledRed" />

                <TextView
                    android:id="@+id/dojoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/my_dojo_placeholder"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintTop_toTopOf="@+id/network_dojo_status_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/network_dojo_status_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline17"
                    app:layout_constraintVertical_bias="0.355"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/dojoRightBtn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_chevron_right_white_24dp"
                    app:layout_constraintTop_toTopOf="@+id/network_dojo_status_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/network_dojo_status_icon"                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/network_dojo_status_icon" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="62dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
